<resources>
    <string name="app_name">Diary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diary">Diary</string>
    <string name="tittle">Tittle</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="notes">Notes</string>
    <string name="header">Header</string>
    <string name="enter_your_notes">Enter your notes</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>