<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentation.ui.fragments.mainScreen.MainScreenFragment">

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_tittle"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_note">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="330dp"
            android:layout_height="44dp"
            android:backgroundTint="@color/white"
            android:hint="@string/header"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/enter_your_notes"
        android:id="@+id/et_description"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_tittle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="330dp"
            android:layout_height="44dp"
            android:backgroundTint="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:textAllCaps="false"
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/white"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="16dp"
        android:id="@+id/rv_note"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#E30000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>